--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-body {
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Okiya</title>
+  <meta charset="utf-8" />
+  <style>
+    body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +16,11 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+}</style>
+  <link rel="stylesheet" href="src/board.css">
+</head>
+<body>
+  <div id="app"></div>
+  <script src="./src/App.js"></script>
+</body>
+</html>
