--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@ code {
 </head>
 <body>
   <div id="app"></div>
-  <script src="./src/App.js"></script>
+  <script type=module src="./src/App.js"></script>
 </body>
 </html>
